# gyroflow

./: Cargo.toml  Justfile  build.rs
_scripts/: common.just  linux.just
src/: controller.rs  gyroflow.rs  resources.rs  util.rs
src/core/: camera_identifier.rs  filtering.rs  keyframes.rs  lib.rs  settings.rs  util.rs
src/core/filesystem/: mod.rs
src/core/gpu/: mod.rs  wgpu.rs
src/core/gpu/stabilize_spirv/src/distortion_models/: mod.rs
src/core/gyro_source/: mod.rs
src/core/imu_integration/: complementary.rs  complementary_v2.rs  mod.rs
src/core/smoothing/: default_algo.rs  mod.rs  plain.rs
src/core/stabilization/: compute_params.rs  cpu_undistort.rs  frame_transform.rs  mod.rs
src/core/stabilization/distortion_models/: opencv_fisheye.rs
src/core/synchronization/: autosync.rs  mod.rs
src/core/synchronization/estimate_pose/: find_essential_mat.rs  find_homography.rs  mod.rs
src/core/synchronization/find_offset/: essential_matrix.rs  visual_features.rs
src/core/synchronization/optical_flow/: akaze.rs  mod.rs  opencv_dis.rs  opencv_pyrlk.rs
src/core/zooming/: fov_iterative.rs  mod.rs
src/external_sdk/: mod.rs
src/rendering/: ffmpeg_processor.rs  ffmpeg_video.rs  mod.rs
